[project]
name = "tank-game"
version = "0.1.0"
description = "Lightweight 2-player tank game using Pygame with optional LAN play via UDP multicast."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Carlos Valente", email = "cfmvcarlos@gmail.com" }]
license = { text = "MIT" }
keywords = ["pygame", "game", "multiplayer", "lan", "tanks"]
dependencies = ["pygame>=2.6.0"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cfmvcarlos/tank_game"
Repository = "https://github.com/cfmvcarlos/tank_game.git"
Issues = "https://github.com/cfmvcarlos/tank_game/issues"

[dependency-groups]
dev = [
    "pytest~=9.0.0",       # Testing framework
    "pytest-cov~=7.0.0",   # Coverage plugin for pytest
    "mypy~=1.18.0",        # Static type checker
    "ruff~=0.14.0",        # Fast Python linter
    "pydoclint~=0.8.0",    # Docstring linter
    "pytest-xdist~=3.8.0", # Parallel test execution
]


[tool.ruff]
line-length = 88
lint.select = ["ALL"]
lint.ignore = ["CPY", "FIX", "TD"]
lint.pydocstyle.convention = "numpy"
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow assert statements in tests

[tool.mypy]
# Import discovery
files = ["tfmp_sensor", "tests"]
exclude = ["^build/", "^dist/"]
# Platform configuration
python_version = "3.13"
# Disallow dynamic typing
disallow_any_generics = true
# Untyped definitions and calls
disallow_untyped_defs = true
check_untyped_defs = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# Miscellaneous strictness flags
strict_equality = true
strict = true
# Configuring error messages
show_error_context = true
show_column_numbers = true
pretty = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q -n auto"
testpaths = ["tests"]

[tool.coverage]
run.branch = true
run.relative_files = true
report.fail_under = 90
report.show_missing = true
report.skip_covered = true
report.sort = "cover"

[tool.pydoclint]
exclude = ".git|.tox|.venv|build|dist|.uv-cache|.mypy_cache|.ruff_cache"
skip-checking-short-docstrings = false
check-style-mismatch = true
check-arg-defaults = true
show-filenames-in-every-violation-message = true
check-class-attributes = false
